# MSYS2-pacman

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  VERSION
_common/: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt
_common/include/common/: CMakeLists.txt  util-common.h
_common/src/common/: CMakeLists.txt  ini.c
_config/: CMakeLists.txt
_config/include/: config.h  defines.h
_libmakepkg/: .gitignore
common/: CMakeLists.txt
common/include/common/: config.h  defines.h  ini.h
common/src/common/: util-common.c
config/: .gitattributes  CMakeLists.txt
config/include/: config.h  defines.h
include/: cnf.h  config.h
include/pacman/: util-common.h  version.h
libalpm/: CMakeLists.txt
libalpm/include/alpm/: CMakeLists.txt
libalpm/include/common/: util-common.h
libalpm/src/alpm/: CMakeLists.txt
pacman/: .gitignore
pacman/include/pacman/: ini.h  version.h
pacman/src/pacman/: ini.c  util-common.c
scripts/cmake/Modules/: GetSourceInfo.cmake  JoinArgs.cmake  JoinPaths.cmake
util/: .clang-tidy  .gitignore
